--- a/projects/poker-calc-v2/client/app/package.json
+++ b/projects/poker-calc-v2/client/app/package.json
@@ -42,8 +42,8 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
+    "@typescript-eslint/eslint-plugin": "5.3.1",
+    "@typescript-eslint/parser": "5.3.1",
     "eslint": "^8.53.0"
   }
 }
