Добавили поддержку scss

--- a/projects/poker-calc-v2/client/app/.eslintrc
+++ b/projects/poker-calc-v2/client/app/.eslintrc
@@ -10,7 +10,7 @@
       "plugin:@typescript-eslint/recommended"
     ],
     "rules": {
-        "semi":"error",
-        "@typescript-eslint/explicit-function-return-type": "error"
+        "semi":"warn",
+        "@typescript-eslint/explicit-function-return-type": "warn"
     }
   }
