--- a/projects/poker-calc-v2/client/app/tsconfig.json
+++ b/projects/poker-calc-v2/client/app/tsconfig.json
@@ -19,9 +19,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "paths": {
-      "@/*": ["./src/modules/*"]
-    }
+    "baseUrl": "src"
   },
   "include": [
     "src"
