--- a/projects/poker-calc-v2/client/app/package.json
+++ b/projects/poker-calc-v2/client/app/package.json
@@ -13,7 +13,10 @@
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.0.4",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.0",
+    "redux-devtools-extension": "^2.13.9",
     "sass": "^1.69.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
