--- a/projects/poker-calc-v2/client/poker-odds-engine/.eslintrc.json
+++ b/projects/poker-calc-v2/client/poker-odds-engine/.eslintrc.json
@@ -16,21 +16,10 @@
         "@typescript-eslint"
     ],
     "rules": {
-"indent": [
-            "error",
-            4
-        ],
-        "linebreak-style": [
-            "error",
-            "windows"
-        ],
-        "quotes": [
-            "error",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ]
+        "indent": ["error",4],
+        "linebreak-style": ["error","windows"],
+        "quotes": ["error","single"],
+        "semi": ["error","always"],
+        "no-prototype-builtins": "off"
     }
 }
