--- a/projects/poker-calc-v2/client/poker-odds-engine/package.json
+++ b/projects/poker-calc-v2/client/poker-odds-engine/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.17.21",
+    "poker-calc": "^0.1.9",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
@@ -22,6 +23,7 @@
     "@types/lodash": "^4.14.202",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
+    "dts-gen": "^0.9.0",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2"
