--- a/projects/poker-calc-v2/client/poker-odds-engine/package.json
+++ b/projects/poker-calc-v2/client/poker-odds-engine/package.json
@@ -7,9 +7,11 @@
     "build": "tsc",
     "build:watch": "tsc --watch",
     "test": "jest",
+    "start": "node .",
     "ts:init": "tsc --init",
     "eslint:init": "npm init @eslint/config",
-    "postinstall": "npm run build"
+    "patch": "npx ts-patch install",
+    "postinstall": "npm run patch && npm run build"
   },
   "author": "Eugene Komarov",
   "license": "ISC",
@@ -26,6 +28,8 @@
     "dts-gen": "^0.9.0",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.2"
+    "ts-jest": "^29.1.2",
+    "ts-patch": "^3.2.1",
+    "typescript-transform-paths": "^3.4.10"
   }
 }
