--- a/projects/poker-calc-v2/client/app01/.eslintrc
+++ b/projects/poker-calc-v2/client/app01/.eslintrc
@@ -11,6 +11,7 @@
     ],
     "rules": {
         "semi":"warn",
-        "@typescript-eslint/explicit-function-return-type": "warn"
+        "@typescript-eslint/explicit-function-return-type": "warn",
+        "@typescript-eslint/ban-ts-comment": "warn"
     }
   }
