NashChart interfaces refactor

--- a/projects/poker-calc-v2/client/poker-odds-engine/tsconfig.json
+++ b/projects/poker-calc-v2/client/poker-odds-engine/tsconfig.json
@@ -118,5 +118,5 @@
       },                                                 /* Transform paths in output .d.ts files (Include this line if you output declarations files) */
     ]
   },
-  "include": ["src/**/*", "index.ts"]                    /* Что попадет в билд */
+  "include": ["src/**/*", "index.ts", "test/**/*"]                    /* Что попадет в билд */
 }
